@@ -1,7 +1,7 @@
 package br.ufg.petsadoption.services.impl;
 
 import br.ufg.petsadoption.exceptions.NotFoundException;
-import br.ufg.petsadoption.models.PetDto;
+import br.ufg.petsadoption.dtos.PetDto;
 import br.ufg.petsadoption.repositories.PetsRepository;
 import br.ufg.petsadoption.services.PetsService;
 import org.springframework.stereotype.Service;
@@ -27,7 +27,7 @@ public class PetsServiceImpl implements PetsService {
     @Override
     public void update(Long id, PetDto pet) {
         var entity = petsRepository.findById(id).orElseThrow(() -> new NotFoundException("Pet not found"));
-        pet.toEntity(entity);
+        pet.mergeEntity(entity);
         petsRepository.save(entity);
     }
 
@@ -40,7 +40,7 @@ public class PetsServiceImpl implements PetsService {
     @Override
     public List<PetDto> findAll() {
         var all = petsRepository.findAll().spliterator();
-        return StreamSupport.stream(all, false).map(PetDto::fromEntity).collect(Collectors.toList());
+        return StreamSupport.stream(all, false).map(PetDto::fromEntity).toList();
     }
 
     @Override
